--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=ProductService
 server.port=2020
 logging.level.org.springframework = TRACE
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3300/productServiceDemo
+spring.datasource.username=productServiceDemouser
+spring.datasource.password=sagar@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
