Flyway Implementation with database migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ProductService
 server.port=2020
 logging.level.org.springframework = TRACE
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3300/productServiceDemo
 spring.datasource.username=productServiceDemouser
 spring.datasource.password=sagar@123
