--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
             <artifactId>flyway-mysql</artifactId>
             <version>10.20.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.26.3</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
