--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#for local connection
+
 spring.application.name=ProductService
 server.port=2020
 logging.level.org.springframework = TRACE
@@ -7,3 +9,18 @@ spring.datasource.username=productServiceDemouser
 spring.datasource.password=sagar@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+
+
+#for aws connection
+#spring.application.name=ProductService
+#server.port=2020
+#logging.level.org.springframework = TRACE
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=${PRODUCT_SERVICE_DATABASE_URL}
+#spring.datasource.username=${PRODUCT_SERVICE_USERNAME}
+#spring.datasource.password=${PRODUCT_SERVICE_PASSWORD}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
+
+#PRODUCT_SERVICE_DATABASE_URL=jdbc:mysql://productservice-1.czgkgw6m27ut.eu-north-1.rds.amazonaws.com:3306/productservice;PRODUCT_SERVICE_USERNAME=productUser;PRODUCT_SERVICE_PASSWORD=password
