Eureka code added with load balnce

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.datasource.password=sagar@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+#Eureka config
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.cloud.compatibility-verifier.enabled=false
+
 
 
 #for aws connection
