--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,29 @@
 #for local connection
 
 spring.application.name=ProductService
-server.port=2020
-logging.level.org.springframework = TRACE
+server.port=${PRODUCT_SERVICE_SERVER_PORT}
+#logging.level.org.springframework = TRACE
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3300/productServiceDemo
-spring.datasource.username=productServiceDemouser
-spring.datasource.password=sagar@123
+spring.datasource.url=${PRODUCT_SERVICE_DATABASE_URL}
+spring.datasource.username=${PRODUCT_SERVICE_USERNAME}
+spring.datasource.password=${PRODUCT_SERVICE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+
+
+
+##for local connection
+#
+#spring.application.name=ProductService
+#server.port=2021
+#logging.level.org.springframework = TRACE
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=jdbc:mysql://localhost:3300/productServiceDemo
+#spring.datasource.username=productServiceDemouser
+#spring.datasource.password=sagar@123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
 
 #Eureka config
 eureka.client.register-with-eureka=true
