Created docker image with docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #for local connection
 
 spring.application.name=ProductService
-server.port=${PRODUCT_SERVICE_SERVER_PORT}
+#server.port=${PRODUCT_SERVICE_SERVER_PORT}
+server.port = 2020
 #logging.level.org.springframework = TRACE
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=${PRODUCT_SERVICE_DATABASE_URL}
